# NotStreamDeck

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md
.github/workflows/: release.yml
control/: package-lock.json  package.json  server.js  store.js
control/client/: index.html  package-lock.json  package.json  vite.config.js
control/client/public/: manifest.json  shell.html  sw.js
control/client/src/: App.jsx
control/client/src/components/: HostManager.jsx  KeyButton.jsx  KeyEditor.jsx  PageManager.jsx  Screensaver.jsx  SetupPanel.jsx  StreamDeck.jsx
control/client/src/hooks/: useApi.js
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: command_router.rs  config.rs  main.rs  tray.rs  websocket.rs
server/src/os/: macos.rs  mod.rs  windows.rs
